recursion.cons.lessons.recursion.cons.Nth.scala.error
nth:3: error: not found: value list
	 	list.head
                ^nth:5: error: not found: value list
	     nth(list.tail,n-1)
                 ^