recursion.cons.lessons.recursion.cons.Nth.scala.code
def nth(l:List[Int], n:Int): Int = {
	if(n == 0)
	 	list.head
	else
	     nth(list.tail,n-1)
}
